--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mi Portafolio | Desarrollador Web</title>
+    <link
+      rel="shortcut icon"
+      href="https://ui-avatars.com/api/?name=RD&background=4a6cf7&color=fff&size=20&rounded=true"
+      type="image/x-icon"
+    />
     <meta
       name="description"
       content="Portafolio profesional mostrando proyectos y habilidades en desarrollo web"
@@ -201,7 +206,7 @@
       <div class="container max-w-5xl px-4 mx-auto md:px-8">
         <div class="flex flex-col items-center gap-12 md:flex-row">
           <div
-            class="relative flex-shrink-0 w-64 h-64 overflow-hidden rounded-full md:w-80 md:h-80 border-4 border-white dark:border-gray-700"
+            class="relative flex-shrink-0 w-32 h-32 overflow-hidden rounded-full md:w-56 md:h-56 border-4 border-white dark:border-gray-700"
           >
             <img
               src="https://placehold.co/320x320"
@@ -320,36 +325,36 @@
           >
             <div class="relative h-64 overflow-hidden">
               <img
-                src="https://placehold.co/600x400"
+                src="./assets/sucreglobe.webp"
                 alt="Aplicación de Comercio Electrónico"
                 class="object-cover w-full h-full transition-transform duration-500 hover:scale-105"
               />
             </div>
             <div class="p-6">
               <h3 class="mb-2 text-xl font-bold text-black dark:text-white">
-                Aplicación de Comercio Electrónico
+                Página de empresa de viajes sucre globe
               </h3>
               <p class="mb-4 text-gray-600 dark:text-gray-300">
-                Una plataforma de comercio electrónico completa con carrito de
-                compras y pasarela de pago.
+                Una plataforma donde muestra los servicios y descripción de la
+                empresa sucre globe.
               </p>
               <div class="flex flex-wrap gap-2 mb-4">
                 <span
                   class="px-3 py-1 text-xs font-medium text-gray-600 dark:text-gray-300 bg-gray-100 dark:bg-gray-700 rounded-full"
-                  >React</span
+                  >HTML</span
                 >
                 <span
                   class="px-3 py-1 text-xs font-medium text-gray-600 dark:text-gray-300 bg-gray-100 dark:bg-gray-700 rounded-full"
-                  >Node.js</span
+                  >CSS</span
                 >
                 <span
                   class="px-3 py-1 text-xs font-medium text-gray-600 dark:text-gray-300 bg-gray-100 dark:bg-gray-700 rounded-full"
-                  >MongoDB</span
+                  >PHP</span
                 >
               </div>
               <div class="flex justify-between">
                 <a
-                  href="#"
+                  href="https://sucreglobe.com/"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="inline-flex items-center gap-1 px-3 py-1 text-sm font-medium text-gray-700 dark:text-gray-300 bg-white dark:bg-gray-800 border border-gray-300 dark:border-gray-700 rounded-md hover:bg-gray-100 dark:hover:bg-gray-700"
@@ -372,10 +377,10 @@
                     <polyline points="15 3 21 3 21 9"></polyline>
                     <line x1="10" x2="21" y1="14" y2="3"></line>
                   </svg>
-                  Demo
+                  Sitio web
                 </a>
                 <a
-                  href="#"
+                  href="https://github.com/cristianlrj/webManagment"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="inline-flex items-center gap-1 px-3 py-1 text-sm font-medium text-gray-700 dark:text-gray-300 bg-white dark:bg-gray-800 border border-gray-300 dark:border-gray-700 rounded-md hover:bg-gray-100 dark:hover:bg-gray-700"
@@ -409,18 +414,18 @@
           >
             <div class="relative h-64 overflow-hidden">
               <img
-                src="https://placehold.co/600x400"
+                src="assets/tienda.webp"
                 alt="Dashboard Analítico"
                 class="object-cover w-full h-full transition-transform duration-500 hover:scale-105"
               />
             </div>
             <div class="p-6">
               <h3 class="mb-2 text-xl font-bold text-black dark:text-white">
-                Dashboard Analítico
+                Tienda de repuestos
               </h3>
               <p class="mb-4 text-gray-600 dark:text-gray-300">
-                Panel de control interactivo para visualizar datos empresariales
-                con gráficos en tiempo real.
+                Sitio web donde puedes encontrar diferentes tipos de repuestos
+                para tu vehiculo.
               </p>
               <div class="flex flex-wrap gap-2 mb-4">
                 <span
@@ -429,16 +434,16 @@
                 >
                 <span
                   class="px-3 py-1 text-xs font-medium text-gray-600 dark:text-gray-300 bg-gray-100 dark:bg-gray-700 rounded-full"
-                  >Express</span
+                  >PHP</span
                 >
                 <span
                   class="px-3 py-1 text-xs font-medium text-gray-600 dark:text-gray-300 bg-gray-100 dark:bg-gray-700 rounded-full"
-                  >D3.js</span
+                  >DataTables</span
                 >
               </div>
               <div class="flex justify-between">
                 <a
-                  href="#"
+                  href="https://tienda.autoparteskorea2.com/"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="inline-flex items-center gap-1 px-3 py-1 text-sm font-medium text-gray-700 dark:text-gray-300 bg-white dark:bg-gray-800 border border-gray-300 dark:border-gray-700 rounded-md hover:bg-gray-100 dark:hover:bg-gray-700"
@@ -461,10 +466,10 @@
                     <polyline points="15 3 21 3 21 9"></polyline>
                     <line x1="10" x2="21" y1="14" y2="3"></line>
                   </svg>
-                  Demo
+                  Sitio web
                 </a>
                 <a
-                  href="#"
+                  href="https://github.com/cristianlrj/tienda"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="inline-flex items-center gap-1 px-3 py-1 text-sm font-medium text-gray-700 dark:text-gray-300 bg-white dark:bg-gray-800 border border-gray-300 dark:border-gray-700 rounded-md hover:bg-gray-100 dark:hover:bg-gray-700"
@@ -726,16 +731,6 @@
           <div
             class="px-4 py-2 text-sm font-medium transition-colors bg-white dark:bg-gray-700 border rounded-md border-gray-200 dark:border-gray-600 hover:bg-gray-100 dark:hover:bg-gray-600 text-gray-700 dark:text-gray-200"
           >
-            React
-          </div>
-          <div
-            class="px-4 py-2 text-sm font-medium transition-colors bg-white dark:bg-gray-700 border rounded-md border-gray-200 dark:border-gray-600 hover:bg-gray-100 dark:hover:bg-gray-600 text-gray-700 dark:text-gray-200"
-          >
-            Next.js
-          </div>
-          <div
-            class="px-4 py-2 text-sm font-medium transition-colors bg-white dark:bg-gray-700 border rounded-md border-gray-200 dark:border-gray-600 hover:bg-gray-100 dark:hover:bg-gray-600 text-gray-700 dark:text-gray-200"
-          >
             Node.js
           </div>
           <div
@@ -746,12 +741,7 @@
           <div
             class="px-4 py-2 text-sm font-medium transition-colors bg-white dark:bg-gray-700 border rounded-md border-gray-200 dark:border-gray-600 hover:bg-gray-100 dark:hover:bg-gray-600 text-gray-700 dark:text-gray-200"
           >
-            MongoDB
-          </div>
-          <div
-            class="px-4 py-2 text-sm font-medium transition-colors bg-white dark:bg-gray-700 border rounded-md border-gray-200 dark:border-gray-600 hover:bg-gray-100 dark:hover:bg-gray-600 text-gray-700 dark:text-gray-200"
-          >
-            PostgreSQL
+            MySQL
           </div>
           <div
             class="px-4 py-2 text-sm font-medium transition-colors bg-white dark:bg-gray-700 border rounded-md border-gray-200 dark:border-gray-600 hover:bg-gray-100 dark:hover:bg-gray-600 text-gray-700 dark:text-gray-200"
@@ -776,17 +766,12 @@
           <div
             class="px-4 py-2 text-sm font-medium transition-colors bg-white dark:bg-gray-700 border rounded-md border-gray-200 dark:border-gray-600 hover:bg-gray-100 dark:hover:bg-gray-600 text-gray-700 dark:text-gray-200"
           >
-            Docker
+            GitHub
           </div>
           <div
             class="px-4 py-2 text-sm font-medium transition-colors bg-white dark:bg-gray-700 border rounded-md border-gray-200 dark:border-gray-600 hover:bg-gray-100 dark:hover:bg-gray-600 text-gray-700 dark:text-gray-200"
           >
-            AWS
-          </div>
-          <div
-            class="px-4 py-2 text-sm font-medium transition-colors bg-white dark:bg-gray-700 border rounded-md border-gray-200 dark:border-gray-600 hover:bg-gray-100 dark:hover:bg-gray-600 text-gray-700 dark:text-gray-200"
-          >
-            Firebase
+            Bootstrap
           </div>
         </div>
       </div>
@@ -909,7 +894,7 @@
               <script>
                 document.write(new Date().getFullYear());
               </script>
-              Tu Nombre. Todos los derechos reservados.
+              Roberto Ducharne.
             </p>
           </div>
           <div class="flex gap-4">
@@ -965,7 +950,7 @@
               <span class="sr-only">LinkedIn</span>
             </a>
             <a
-              href="mailto:contacto@ejemplo.com"
+              href="mailto:rducharne3@gmail.com"
               class="text-gray-600 dark:text-gray-300 hover:text-black dark:hover:text-white"
             >
               <svg
@@ -984,6 +969,17 @@
                 <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
               </svg>
               <span class="sr-only">Email</span>
+            </a>
+            <a
+              href="https://wa.me/+584248907707"
+              class="text-gray-600 dark:text-gray-300 hover:text-black dark:hover:text-white"
+            >
+              <img
+                src="assets/whatsapp-svgrepo-com.svg"
+                alt=""
+                class="w-5 font-thin"
+              />
+              <span class="sr-only">WhatsApp</span>
             </a>
           </div>
         </div>
