--- a/index.html
+++ b/index.html
@@ -224,8 +224,9 @@
               Soy un desarrollador apasionado por crear soluciones digitales que
               combinan estética y funcionalidad. Con experiencia en desarrollo
               web full-stack, me especializo en construir aplicaciones modernas,
-              responsivas y de alto rendimiento utilizando las últimas
-              tecnologías.
+              adaptables y de alto rendimiento utilizando las últimas
+              tecnologías. He trabajando en equipo y tengo experiencias en
+              trabajos reales.
             </p>
             <div class="flex flex-wrap justify-center gap-3 md:justify-start">
               <a
