--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
               combinan estética y funcionalidad. Con experiencia en desarrollo
               web full-stack, me especializo en construir aplicaciones modernas,
               adaptables y de alto rendimiento utilizando las últimas
-              tecnologías. He trabajando en equipo y tengo experiencias en
+              tecnologías. He trabajado en equipo y tengo experiencias en
               trabajos reales.
             </p>
             <div class="flex flex-wrap justify-center gap-3 md:justify-start">
