--- a/index.html
+++ b/index.html
@@ -504,36 +504,35 @@
           >
             <div class="relative h-64 overflow-hidden">
               <img
-                src="https://placehold.co/600x400"
+                src="assets/sistema.webp"
                 alt="Aplicación de Gestión de Tareas"
                 class="object-cover w-full h-full transition-transform duration-500 hover:scale-105"
               />
             </div>
             <div class="p-6">
               <h3 class="mb-2 text-xl font-bold text-black dark:text-white">
-                Aplicación de Gestión de Tareas
+                Sistema de inventario
               </h3>
               <p class="mb-4 text-gray-600 dark:text-gray-300">
-                Herramienta de productividad para organizar y seguir el progreso
-                de tareas y proyectos.
+                Sistema de inventario para una distribuidora de repuestos de vehiculos
               </p>
               <div class="flex flex-wrap gap-2 mb-4">
                 <span
                   class="px-3 py-1 text-xs font-medium text-gray-600 dark:text-gray-300 bg-gray-100 dark:bg-gray-700 rounded-full"
-                  >React</span
+                  >Vue.js</span
                 >
                 <span
                   class="px-3 py-1 text-xs font-medium text-gray-600 dark:text-gray-300 bg-gray-100 dark:bg-gray-700 rounded-full"
-                  >Firebase</span
+                  >PHP</span
                 >
                 <span
                   class="px-3 py-1 text-xs font-medium text-gray-600 dark:text-gray-300 bg-gray-100 dark:bg-gray-700 rounded-full"
-                  >Tailwind</span
+                  >Datatables</span
                 >
               </div>
               <div class="flex justify-between">
                 <a
-                  href="#"
+                  href="https://autoparteskorea2.com/"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="inline-flex items-center gap-1 px-3 py-1 text-sm font-medium text-gray-700 dark:text-gray-300 bg-white dark:bg-gray-800 border border-gray-300 dark:border-gray-700 rounded-md hover:bg-gray-100 dark:hover:bg-gray-700"
@@ -558,31 +557,7 @@
                   </svg>
                   Demo
                 </a>
-                <a
-                  href="#"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  class="inline-flex items-center gap-1 px-3 py-1 text-sm font-medium text-gray-700 dark:text-gray-300 bg-white dark:bg-gray-800 border border-gray-300 dark:border-gray-700 rounded-md hover:bg-gray-100 dark:hover:bg-gray-700"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="w-4 h-4"
-                  >
-                    <path
-                      d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
-                    ></path>
-                    <path d="M9 18c-4.51 2-5-2-7-2"></path>
-                  </svg>
-                  Código
-                </a>
+              
               </div>
             </div>
           </div>
