--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                     <polyline points="15 3 21 3 21 9"></polyline>
                     <line x1="10" x2="21" y1="14" y2="3"></line>
                   </svg>
-                  Demo
+                  Sitio Web
                 </a>
               
               </div>
@@ -620,7 +620,7 @@
                     <polyline points="15 3 21 3 21 9"></polyline>
                     <line x1="10" x2="21" y1="14" y2="3"></line>
                   </svg>
-                  Demo
+                  Sitio Web
                 </a>
                 <a
                   href="#"
